tests/testWorkflows/invalid_workflows/invalidAppWorkflow.playbook
{
    "name": "invalidAppWorkflow",
    "workflows": [
        {
            "name": "multiactionWorkflow",
            "next_actions": [
                {
                    "conditions": [
                        {
                            "action": "regMatch",
                            "app": "HelloWorld",
                            "arguments": [
                                {
                                    "name": "regex",
                                    "value": "(.*)"
                                }
                            ],
                            "transforms": [
                                {
                                    "action": "length",
                                    "app": "HelloWorld",
                                    "arguments": []
                                }
                            ]
                        }
                    ],
                    "destination_uid": "1",
                    "source_uid": "2",
                    "status": "Success"
                }
            ],
            "start": "2",
            "actions": [
                {
                    "action": "helloWorld",
                    "app": "HelloWorld",
                    "arguments": [
                        {
                            "name": "call",
                            "value": "Hello World"
                        }
                    ],
                    "name": "1",
                    "position": {},
                    "risk": 0,
                    "uid": "1"
                },
                {
                    "action": "helloWorld",
                    "app": "Invalid",
                    "arguments": [],
                    "name": "start",
                    "position": {},
                    "risk": 0,
                    "uid": "2"
                }
            ]
        }
    ]
}